--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,48 @@
-pytest
-fastapi
-uvicorn
-Jinja2
+anyio==3.6.2
+attrs==22.2.0
+blinker==1.4
+click==8.1.3
+command-not-found==0.3
+cryptography==3.4.8
+dbus-python==1.2.18
+distro==1.7.0
+distro-info===1.1build1
+exceptiongroup==1.1.0
+fastapi==0.92.0
+h11==0.14.0
+httplib2==0.20.2
+idna==3.4
+importlib-metadata==4.6.4
+iniconfig==2.0.0
+jeepney==0.7.1
+Jinja2==3.1.2
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+MarkupSafe==2.1.2
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
+packaging==23.0
+pluggy==1.0.0
+pydantic==1.10.5
+PyGObject==3.42.1
+PyJWT==2.3.0
+pyparsing==2.4.7
+pytest==7.2.1
+python-apt==2.3.0+ubuntu2.1
+PyYAML==5.4.1
+SecretStorage==3.3.1
+six==1.16.0
+sniffio==1.3.0
+starlette==0.25.0
+systemd-python==234
+tomli==2.0.1
+typing_extensions==4.5.0
+ubuntu-advantage-tools==27.12
+ufw==0.36.1
+unattended-upgrades==0.1
+uvicorn==0.20.0
+wadllib==1.3.6
+zipp==1.0.0
