--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -8,6 +8,9 @@ yew = { version = "0.21.0", features = ["csr"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4.42"
 web-sys = "0.3.69"
 log = "0.4"
 console_log = "1.0.0"
+anyhow = "1.0.86"
+reqwasm = "0.5.0"
