--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -18,3 +18,4 @@ reqwasm = "0.5.0"
 log = "0.4.14"
 console_log = "1.0.0"
 uuid =  { version = "1.10.0", features = ["serde"] }
+gloo-timers = "0.3.0"
