--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
 services:
-  web:
+  game:
     build: .
     ports:
-      - "8001:8001" # Frontend port
+      - "8001:8001" # Frontend
       - "8080:8080"
     volumes:
       - .:/code
     environment:
-      - RUST_LOG=info  # Optional: Set Rust log level
+      - RUST_LOG=info
+    depends_on:
+      - cache
   cache:
     image: redis:6.2-alpine
     hostname: redis
